test/expected/explain_la_cor.out
explain [=,&]
           ^
12: error: default capture previously specified
